force-app/main/default/objects/Integration_Operation_Mapping__mdt/Integration_Operation_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Field and JSON path rules used by generic integration operations.</description>
    <label>Integration Operation Mapping</label>
    <pluralLabel>Integration Operation Mappings</pluralLabel>
</CustomObject>