force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Collection_Path__c.field-meta.xml
<CustomField>
    <fullName>Collection_Path__c</fullName>
    <label>Collection Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>