force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/External_Path__c.field-meta.xml
<CustomField>
    <fullName>External_Path__c</fullName>
    <label>External JSON Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>