force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Is_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External ID</label>
    <type>Checkbox</type>
</CustomField>