force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Null_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Null_Behavior__c</fullName>
    <label>Null Behavior</label>
    <length>30</length>
    <type>Text</type>
</CustomField>