force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Operation_Key__c.field-meta.xml
<CustomField>
    <fullName>Operation_Key__c</fullName>
    <label>Operation Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>