force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Parent_External_Path__c.field-meta.xml
<CustomField>
    <fullName>Parent_External_Path__c</fullName>
    <label>Parent External Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>