force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Parent_Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Salesforce_Field__c</fullName>
    <label>Parent Salesforce Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>