force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>