force-app/main/default/objects/Integration_Operation_Mapping__mdt/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <label>Transform</label>
    <length>40</length>
    <type>Text</type>
</CustomField>